export const snapshot = {};

snapshot[`constant num 1`] = `
{
  const: "Hello",
}
`;

snapshot[`constant num 2`] = `
{
  const: "Hello",
  description: "One.",
}
`;

snapshot[`constant num 3`] = `
{
  const: "Hello",
  description: "Two. One.",
}
`;

snapshot[`constant str 1`] = `
{
  const: 42,
}
`;

snapshot[`constant str 2`] = `
{
  const: 42,
  description: "One.",
}
`;

snapshot[`constant str 3`] = `
{
  const: 42,
  description: "Two. One.",
}
`;
